crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R1_plus_R1.rs

use ladder_types::kiss_ladder::*;

fn main() {
   let _ = R1::new() + R1::new();
}
